<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EchoBond</string>
    <string name="none"></string>
    <string name="facebook_app_id">825701450811254</string>
    <string name="facebook_permissions">public_profile,email</string>
    <string name="facebook_root_path">v2.2/me</string>
    <string name="facebook_sso_timeout">6000</string>
    <string name="gcm_sender_id">812713217371</string>
    <string name="app_copyright">Copyright © 2014–2015 EchoBond. All Rights Reserved. </string>
    <string name="app_acc_tos">Acceptance of Terms</string>
    <string name="app_acc_tos_detail">The services that EchoBond provides to you are subject to the following Terms of Use ("TOU"). EchoBond reserves the 
        right to update the TOU at any time without notice to you.</string>
    <string name="app_desc_tos">Description of Services</string>
    <string name="app_desc_tos_detail">Through its network of Web properties, EchoBond provides you with access to a variety of resources, including EchoBond app 
		and EchoBond website, and product information (collectively "Services"). The Services, including any updates, enhancements, 
		new features, and/or the addition of any new properties, are subject to the TOU.</string>
	<string name="app_limit_tos">Personal and Non-Commercial Use Limitation</string>
	<string name="app_limit_tos_detail">Unless otherwise specified, the Services are for your personal and 
		non-commercial use. You may not modify, copy, distribute, transmit, display, perform, reproduce, publish, license, create 
		derivative works from, transfer, or sell any information, software, products or services obtained from the Services.</string>
	<string name="app_info_tos">Privacy and Protection of Personal Information</string>
	<string name="app_info_tos_detail">EchoBond guarantees that any private information collected through EchoBond 
		app or website may not be transmitted or sold to the public.</string>

    <!-- NAME OF THE ACTIVITIES -->
    <string name="title_activity_login_page">LoginPage</string>
    <string name="title_activity_intro_page">IntroPage</string>
    <string name="title_activity_following_page">FollowingPage</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_search_page">SearchPage</string>
    <string name="title_activity_new_post_page">NewPostPage</string>
    <string name="title_activity_app_setting_page">AppSettingPage</string>
    <string name="title_activity_image_page">ImagePage</string>
    <string name="title_activity_comment_page">CommentPage</string>
    <string name="title_activity_chat_page">ChatPage</string>
    <string name="title_activity_people_page">PeoplePage</string>
    <string name="title_activity_thought_page">ThoughtPage</string>
    <string name="title_activity_edit_profile_page">EditProfilePage</string>
    <string name="title_activity_view_more_page">ViewMorePage</string>
    <string name="title_activity_service_page">ServicePage</string>
    <string name="title_activity_search_result_page">SearchResultPage</string>
    <string name="title_activity_avatar_page">AvatarPage</string>

    <!-- NAME OF THE TITLES IN SENDING NEW POST -->
    <string name="title_new_post_share">Share Anything</string>
    <string name="title_new_post_pic">Create A Post</string>
    <string name="title_new_post_write">Write Your Thought</string>
    <string name="title_new_post_grouptitle">GROUPS</string>
    <string name="title_new_post_tag">TAGS</string>
    <string name="title_new_post_group">Put It in A Group</string>

    <!-- NAME OF THE TITLES IN SEARCHING PAGE -->
    <string name="search_page_category">Explore Great Ideas</string>
    <string name="search_page_following">Hot Like Fire</string>

    <!-- LIST OF THE CATEGORY -->
    <string name="category_feelings">Feelings</string>
    <string name="category_good_idea">A Good Idea</string>
    <string name="category_dream">Your Dream</string>
    <string name="category_interest">Interest</string>
    <string name="category_plan">Plan</string>
    <string name="category_other">Other</string>

    <!-- EDIT PROFILE PAGE -->
    <string name="edit_profile_basic">Basic Info</string>
    <string name="edit_profile_more">More About You</string>
    <string name="edit_profile_more_groups"><u>MORE Groups…</u></string>
    <string name="edit_profile_more_tags"><u>MORE Hashtags…</u></string>
    <string name="edit_profile_activity_title">Edit Profile</string>
    <string name="edit_profile_set_avatar">Set Your Avatar</string>
    <string name="edit_profile_preset_avatar">Set Preset Avatar</string>
    <string name="edit_profile_poster_avatar">Create Poster Avatar</string>
    <string name="edit_profile_canvas_avatar">Draw Your Avatar</string>
    <string name="edit_profile_reset_password">Reset Password</string>
    <string name="edit_profile_reset_password_origin">Your Origin Password:</string>
    <string name="edit_profile_reset_password_new">Your New Password:</string>
    <string name="edit_profile_reset_password_new_again">New Password Again:</string>

    <!-- INDICATORS -->
    <string name="following_groups">Follow These Groups</string>
    <string name="following_hashtags">Follow These Hashtags</string>
    <string name="hello_world">Hello world!</string>
    <string name="thought_boosts"> boosts</string>
    <string name="thought_sep">|</string>
    <string name="thought_comments"> comments</string>
    <string name="comment_title">Say Something Nice :)</string>
    <string name="view_thoughts">View Thoughts</string>
    <string name="comment_list">Comment List</string>
    <string name="rubber_seekbar">Rubber Size: </string>
    <string name="pen_seekbar">Draw Size: </string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="setting_following">You can follow us at:</string>
    <string name="notification_vibrate">Vibrate</string>
    <string name="notification_sound">Sound</string>

</resources>
