<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="vertical"
	    android:paddingTop="10dp"
	    android:paddingBottom="20dp" >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:text="@string/app_copyright"
	        android:textSize="12sp" />
   	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:text="@string/app_acc_tos"
	        android:textSize="15sp" />
   	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:text="@string/app_acc_tos_detail"
	        android:textSize="12sp" />
   	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:text="@string/app_desc_tos"
	        android:textSize="15sp" />
   	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:text="@string/app_desc_tos_detail"
	        android:textSize="12sp" />
   	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:text="@string/app_limit_tos"
	        android:textSize="15sp" />
   	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:text="@string/app_limit_tos_detail"
	        android:textSize="12sp" />
   	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:text="@string/app_info_tos"
	        android:textSize="15sp" />
   	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:text="@string/app_info_tos_detail"
	        android:textSize="12sp" />
   	    	    	    	    	    
	</LinearLayout>
	
</ScrollView>
