<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >
    
    <LinearLayout 
        android:id="@+id/button_category_feelings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/corners_bg_blue"
        android:gravity="center_vertical"
        android:clickable="true" >
        <TextView 
            android:id="@+id/text_category_feelings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/category_feelings"
            android:textSize="30sp"
            android:textColor="#ffffff" />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/button_category_good_idea"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/corners_bg_red"
        android:gravity="center_vertical"
        android:clickable="true" >
        <TextView 
            android:id="@+id/text_category_good_idea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/category_good_idea"
            android:textSize="30sp"
            android:textColor="#ffffff" />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/button_category_dream"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/corners_bg_orange"
        android:gravity="center_vertical"
        android:clickable="true" >
        <TextView 
            android:id="@+id/text_category_dream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/category_dream"
            android:textSize="30sp"
            android:textColor="#ffffff" />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/button_category_interest"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/corners_bg_green"
        android:gravity="center_vertical"
        android:clickable="true" >
        <TextView 
            android:id="@+id/text_category_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/category_interest"
            android:textSize="30sp"
            android:textColor="#ffffff" />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/button_category_plan"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/corners_bg_yellow"
        android:gravity="center_vertical"
        android:clickable="true" >
        <TextView 
            android:id="@+id/text_category_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/category_plan"
            android:textSize="30sp"
            android:textColor="#ffffff" />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/button_category_other"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/corners_bg_cyan"
        android:gravity="center_vertical"
        android:clickable="true" >
        <TextView 
            android:id="@+id/text_category_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/category_other"
            android:textSize="30sp"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>
