<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:id="@+id/select_avatar_preset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:padding="6dp"
        android:clickable="true" >
        <ImageView 
            android:contentDescription="@string/none"
            android:id="@+id/select_avatar_preset_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_launcher" />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/select_avatar_preset_view"
            android:layout_toEndOf="@id/select_avatar_preset_view"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:text="@string/edit_profile_preset_avatar"
            android:textSize="20sp" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/select_avatar_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:padding="6dp"
        android:clickable="true" >
        <ImageView 
            android:contentDescription="@string/none"
            android:id="@+id/select_avatar_poster_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true" />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/select_avatar_poster_view"
            android:layout_toEndOf="@id/select_avatar_poster_view"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:text="@string/edit_profile_poster_avatar"
            android:textSize="20sp" />
    </RelativeLayout>
        
    <RelativeLayout 
        android:id="@+id/select_avatar_canvas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:padding="6dp"
        android:clickable="true" >
        <ImageView 
            android:contentDescription="@string/none"
            android:id="@+id/select_avatar_canvas_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true" />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/select_avatar_canvas_view"
            android:layout_toEndOf="@id/select_avatar_canvas_view"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:text="@string/edit_profile_canvas_avatar"
            android:textSize="20sp" />
    </RelativeLayout>
        
</LinearLayout>
