<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical" >
    
	<RelativeLayout 
	    android:id="@+id/reset_password_origin"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="7dp" >
	    <TextView 
	        android:contentDescription="@string/none"
	        android:id="@+id/reset_password_origin_view"
	        android:layout_width="125dp"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:text="@string/edit_profile_reset_password_origin"
	        android:textSize="12sp"
	        android:textStyle="bold" />
	    <EditText 
	        android:id="@+id/reset_password_origin_input"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/reset_password_origin_view"
	        android:layout_toEndOf="@id/reset_password_origin_view"
	        android:layout_marginLeft="10dp"
	        android:layout_marginStart="10dp"
	        android:layout_marginRight="3dp"
	        android:layout_marginEnd="3dp"
	        android:paddingLeft="5dp"
	        android:paddingRight="5dp"
	        android:inputType="textPassword"
	        android:background="@drawable/square_edittext_lightgrey"
	        android:minHeight="30dp"
	        android:maxLines="4"
	        android:textSize="15sp" />
	</RelativeLayout>
	
	<RelativeLayout 
	    android:id="@+id/reset_password_new"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="7dp" >
	    <TextView 
	        android:contentDescription="@string/none"
	        android:id="@+id/reset_password_new_view"
	        android:layout_width="125dp"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:text="@string/edit_profile_reset_password_new"
	        android:textSize="12sp"
	        android:textStyle="bold" />
	    <EditText 
	        android:id="@+id/reset_password_new_input"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/reset_password_new_view"
	        android:layout_toEndOf="@id/reset_password_new_view"
	        android:layout_marginLeft="10dp"
	        android:layout_marginStart="10dp"
	        android:layout_marginRight="3dp"
	        android:layout_marginEnd="3dp"
	        android:paddingLeft="5dp"
	        android:paddingRight="5dp"
	        android:inputType="textPassword"
	        android:background="@drawable/square_edittext_lightgrey"
	        android:minHeight="30dp"
	        android:maxLines="4"
	        android:textSize="15sp" />
	</RelativeLayout>
	
	<RelativeLayout 
	    android:id="@+id/reset_password_new_again"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="7dp" >
	    <TextView 
	        android:contentDescription="@string/none"
	        android:id="@+id/reset_password_new_again_view"
	        android:layout_width="125dp"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:text="@string/edit_profile_reset_password_new_again"
	        android:textSize="12sp"
	        android:textStyle="bold" />
	    <EditText 
	        android:id="@+id/reset_password_new_again_input"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/reset_password_new_again_view"
	        android:layout_toEndOf="@id/reset_password_new_again_view"
	        android:layout_marginLeft="10dp"
	        android:layout_marginStart="10dp"
	        android:layout_marginRight="3dp"
	        android:layout_marginEnd="3dp"
	        android:paddingLeft="5dp"
	        android:paddingRight="5dp"
	        android:inputType="textPassword"
	        android:background="@drawable/square_edittext_lightgrey"
	        android:minHeight="30dp"
	        android:maxLines="2"
	        android:textSize="15sp" />
	</RelativeLayout>
    

</LinearLayout>
