<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants" >
    
    <ImageView  
        android:contentDescription="@string/none"
        android:id="@+id/thought_list_pic"  
        android:layout_width="match_parent"  
        android:layout_height="330dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:clickable="true" />  
    <TextView  
        android:id="@+id/thought_list_title"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"
        android:layout_below="@id/thought_list_pic"
        android:paddingLeft="4dp"  
        android:paddingRight="4dp"  
        android:textStyle="bold"
        android:textSize="18sp" />
    <TextView  
        android:id="@+id/thought_list_content"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"  
        android:layout_below="@id/thought_list_title"
        android:padding="4dp" />
    <TextView 
        android:id="@+id/thought_list_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/thought_list_pic"
        android:padding="4dp" />
    <TextView 
        android:id="@+id/thought_list_boostsnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/thought_list_content"
        android:ellipsize="end"
        android:lines="1"
        android:text=""
        android:padding="4dp" />
    <TextView 
        android:id="@+id/thought_list_boosts_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/thought_list_boostsnum"
        android:layout_toEndOf="@id/thought_list_boostsnum"
        android:layout_below="@id/thought_list_content"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/thought_boosts"
        android:textSize="13sp"
        android:padding="4dp" />
    <TextView 
        android:id="@+id/thought_list_seperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:ellipsize="end"
        android:layout_below="@id/thought_list_content"
        android:layout_toRightOf="@id/thought_list_boosts_txt"
        android:layout_toEndOf="@id/thought_list_boosts_txt"
        android:text="@string/thought_sep"
        android:padding="2dp"/>
    <TextView 
        android:id="@+id/thought_list_commentsnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/thought_list_content"
        android:layout_toRightOf="@id/thought_list_seperator"
        android:layout_toEndOf="@id/thought_list_seperator"
        android:text=""
        android:padding="4dp"/>    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/thought_list_content"
        android:layout_toRightOf="@id/thought_list_commentsnum"
        android:layout_toEndOf="@id/thought_list_commentsnum"
        android:text="@string/thought_comments"
        android:textSize="13sp"
        android:padding="4dp"/>
    
    <LinearLayout
        android:id="@+id/thought_list_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/thought_list_boostsnum"
        android:weightSum="4"
        android:gravity="center"
        android:padding="10dp" >

        <ImageView
            android:contentDescription="@string/none"
            android:id="@+id/thought_list_message"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/thoughts_clickable_highfive"
            android:clickable="true" />

        <ImageView
            android:contentDescription="@string/none"
            android:id="@+id/thought_list_boost"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/thoughts_rocket_up_normal"
            android:clickable="true" />

        <ImageView
            android:contentDescription="@string/none"
            android:id="@+id/thought_list_comment"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/thoughts_clickable_comment"
            android:clickable="true" />

        <ImageView
            android:contentDescription="@string/none"
            android:id="@+id/thought_list_share"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/thoughts_clickable_share"
            android:clickable="true" />

    </LinearLayout>
    
    <TextView 
        android:id="@+id/thought_list_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    <TextView
        android:id="@+id/thought_list_poster_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
	<TextView
	    android:id="@+id/thought_list_image"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:visibility="gone"/>
	<TextView
	    android:id="@+id/thought_list_isUserBoost"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:visibility="gone"/>
    <ProgressBar
        android:id="@+id/thought_list_spinner"
        android:layout_width="200dp"
        android:layout_height="10dp"
        android:layout_alignBottom="@+id/thought_list_pic"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:progress="0"
        android:max="100"
       	style="@android:style/Widget.ProgressBar.Horizontal" />
  
</RelativeLayout>
